docs: comprehensive README update with accurate config and features
- Fix config.json schema to use correct snake_case field names
- Add MCP servers configuration with stdio, HTTP, and OAuth examples
- Add custom tools and skills documentation sections
- Add browser tools table (26 tools with extension-only annotations)
- Add remote workers section with Java/TypeScript/Python quick starts
- Fix MCP transport field from "type" to "transport" in examples
- Note browser_upload vs browser_upload_file naming difference
- Update system files directory structure
- Update worker README with Java implementation and --browser flag

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>